--- a/style.css
+++ b/style.css
@@ -25,8 +25,17 @@ body {
 }
 
 .todo-header {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding-left: 5px;
+}
+
+nav .result {
+  background-color: green;
+  color: white;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 10px;
+  width: 300px;
 }
 
 .todo-body {
@@ -56,20 +65,70 @@ body {
   background-color: limegreen;
   border-radius: 40px;
   font-size: 2rem;
+  color: white;
 }
 
 ul li {
   list-style: none;
   font-size: 18px;
   cursor: pointer;
-  padding: 10px;
-}
-
-li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  padding: 12px 8px 12px 50px;
+  position: relative;
   background: #edeef0;
   margin-bottom: 10px;
   border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul li::before {
+  content: "";
+  position: absolute;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  background-image: url(unchecked.png);
+  background-size: cover;
+  background-position: center;
+  top: 15px;
+  left: 8px;
+}
+
+ul li.checked {
+  color: #555;
+  text-decoration: line-through;
+}
+
+ul li.checked::before {
+  background-image: url(checked.png);
+}
+
+.item-setting {
+  width: 80%;
+  overflow: auto;
+}
+
+.item-setting::-webkit-scrollbar {
+  display: none;
+}
+
+.todo-controls {
+  width: 25px;
+  height: 25px;
+  padding: 3px;
+  margin: 5px;
+}
+
+.todo-controls:hover {
+  opacity: 0.7;
+}
+
+.fa-pen-to-square {
+  color: #7b3f00; /* chocolate */
+}
+
+.fa-trash {
+  color: indianred;
 }
