--- a/style.css
+++ b/style.css
@@ -13,15 +13,34 @@ body,
 }
 
 body {
-  background-color: #78c1f3;
+  /* background-color: #78c1f3; */
   min-height: 100vh;
+  max-width: 100%;
+  background-image: url(cork-board.jpg);
+  background-repeat: repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .container {
-  background-color: #fff;
-  padding: 25px;
+  background-color: #f9f9f9;
+  padding: 50px 30px;
   width: 500px;
   border-radius: 10px;
+  margin: 1rem;
+  z-index: 1;
+  transform: rotate(-1deg);
+  position: relative;
+}
+
+.container::before {
+  content: url(cork-pin.png);
+  z-index: 10000;
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: -5%;
+  left: 40%;
 }
 
 .todo-header {
