--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   /* background-color: #78c1f3; */
   min-height: 100vh;
   max-width: 100%;
-  background-image: url(cork-board.jpg);
+  background-image: url(assets/cork-board.jpg);
   background-repeat: repeat;
   background-size: cover;
   background-position: center;
@@ -26,7 +26,6 @@ body {
   background-color: #f9f9f9;
   padding: 50px 30px;
   width: 500px;
-  border-radius: 10px;
   margin: 1rem;
   z-index: 1;
   transform: rotate(-1deg);
@@ -34,7 +33,7 @@ body {
 }
 
 .container::before {
-  content: url(cork-pin.png);
+  content: url(assets/cork-pin.png);
   z-index: 10000;
   position: absolute;
   width: 10px;
@@ -49,12 +48,12 @@ body {
 }
 
 nav .result {
-  background-color: green;
-  color: white;
+  background-color: limegreen;
+  color: black;
   text-align: center;
-  margin: auto;
-  margin-bottom: 10px;
+  margin: 10px auto 15px;
   width: 300px;
+  border-radius: 5px;
 }
 
 .todo-body {
@@ -108,7 +107,7 @@ ul li::before {
   height: 28px;
   width: 28px;
   border-radius: 50%;
-  background-image: url(unchecked.png);
+  background-image: url(assets/unchecked.png);
   background-size: cover;
   background-position: center;
   top: 15px;
@@ -121,7 +120,7 @@ ul li.checked {
 }
 
 ul li.checked::before {
-  background-image: url(checked.png);
+  background-image: url(assets/checked.png);
 }
 
 .item-setting {
