--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .container {
   background-color: #f9f9f9;
-  padding: 50px 30px 30px;
+  padding: 30px;
   width: 500px;
   margin: 1rem;
   z-index: 1;
@@ -39,12 +39,24 @@ body {
   position: absolute;
   width: 10px;
   height: 10px;
-  top: -5%;
+  top: -15px;
   left: 40%;
 }
 
+.todo-count {
+  text-align: center;
+}
+
+.todo-count .pCount {
+  background-color: #a28089;
+  color: white;
+  width: 100px;
+  margin-left: auto;
+  padding: 5px 0;
+}
+
 .todo-header {
-  margin-bottom: 10px;
+  margin: 20px 0 10px;
   padding-left: 5px;
 }
 
