--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
   padding-left: 5px;
 }
 
-nav .result {
+div .result {
   background-color: limegreen;
   color: black;
   text-align: center;
