--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ div .result {
   border-radius: 40px;
   font-size: 2rem;
   color: white;
+  position: absolute;
+  right: 20px;
 }
 
 .todo-main i:hover {
@@ -180,4 +182,36 @@ ul li.checked::before {
 .clear-btn:hover {
   background-color: rgb(231, 170, 95);
   color: white;
+}
+
+@media only screen and (max-width: 650px) {
+  .container {
+    width: 70%;
+    padding: 20px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  .todo-count p {
+    font-size: 0.8rem;
+    width: 70px;
+  }
+
+  .todo-main input {
+    font-size: 15px;
+  }
+
+  .todo-main i {
+    height: 45px;
+    width: 45px;
+    padding: 8px;
+  }
+
+  .clear-btn {
+    height: 30px;
+    width: 50px;
+    font-size: 0.7rem;
+  }
 }
