add overflow style (scroll)

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
   width: 500px;
   margin: 1rem;
   z-index: 1;
-  transform: rotate(-1deg);
   position: relative;
   box-shadow: 2px 2px 30px black;
 }
@@ -104,6 +103,15 @@ div .result {
 .todo-main i:hover {
   color: black;
   transition-duration: 0.3s;
+}
+
+.todo-lists {
+  overflow: scroll;
+  max-height: 50vh;
+}
+
+.todo-lists::-webkit-scrollbar {
+  display: none;
 }
 
 ul li {
